<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_grey_bkg"
              android:layout_centerVertical="true"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="28dp"
        android:text="@string/pls_choose_setting"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <RadioGroup
        android:id="@+id/streaming_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="5dp" >

        <RadioButton
            android:id="@+id/radiobutton_live"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_streaming"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radiobutton_playback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playback"
            android:layout_marginLeft="10dp" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="28dp"
        android:text="@string/pls_choose_support"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <RadioGroup
        android:id="@+id/live_play_support_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="5dp"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/radiobutton_rtmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rtmp"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radiobutton_http_flv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/http_flv" />

        <RadioButton
            android:id="@+id/radiobutton_http_hls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/http_hls" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/vod_play_support_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="5dp"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/radiobutton_http_mp4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/http_mp4"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radiobutton_http_ts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/http_ts" />

        <RadioButton
            android:id="@+id/radiobutton_http_flv_vod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/http_flv" />

        <RadioButton
            android:id="@+id/radiobutton_http_hls_vod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/http_hls" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pls_choose_videopath"
        android:layout_marginTop="15dp"
        android:paddingLeft="28dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/video_path_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_video_path"
        android:layout_marginTop="15dp"
        android:paddingLeft="28dp"
        android:singleLine="true"
        android:textSize="18sp"/>

    <RelativeLayout
        android:id="@+id/play_start_ll"
        style="@style/item_user_info">

        <Button
            android:id="@+id/play_start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_play"/>
    </RelativeLayout>

</LinearLayout>
