<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    tools:context="com.easyvaas.vrplayer.vrplayerdemo.VRPlayerOptionsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="28dp"
        android:text="@string/pls_choose_setting"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/streaming_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radiobutton_live"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/live_streaming" />

        <RadioButton
            android:id="@+id/radiobutton_playback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:checked="true"
            android:text="@string/playback" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="28dp"
        android:text="@string/pls_choose_videopath1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/video_path_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/input_video_path1"
        android:paddingLeft="28dp"
        android:singleLine="true"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/play_start_ll"
        style="@style/item_user_info">

        <Button
            android:id="@+id/play_start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_play" />
    </RelativeLayout>
</LinearLayout>
